--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.3",
     "react-scripts": "5.0.1",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^3.4.17",
+    "typescript": "^5.8.3"
   },
   "scripts": {
     "start": "react-scripts start",
